--- a/index.html
+++ b/index.html
@@ -1,85 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Insure landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  How we work
-  Blog
-  Account
-  View plans
-
-  Humanizing your insurance.
-
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
-
-  View plans
-
-  We’re different
-
-  Snappy Process
-
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
-
-  Affordable Prices
-
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
-
-  People First
-
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
-
-  Find out more about how we work
-
-  How we work
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Insure Landing Page</title>
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <nav>
+          <img src="./images/logo.svg" alt="" class="nav-logo" />
+          <ul class="nav-links">
+            <li><a href="#">How we work</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Account</a></li>
+            <li><a href="#" class="active">View plans</a></li>
+          </ul>
+        </nav>
+        <div class="intro-section">
+          <div class="intro-text">
+            <hr />
+            <h1 class="intro-text-title">
+              Humanizing <br />
+              your insurance.
+            </h1>
+            <p class="intro-text-description">
+              Get your life insurance coverage easier and faster. We blend our
+              expertise and technology to help you find the plan that’s right
+              for you. Ensure you and your loved ones are protected.
+            </p>
+            <button class="intro-text-btn">View plans</button>
+          </div>
+          <img
+            src="./images/image-intro-desktop.jpg"
+            alt="A family of four holding hands"
+            class="intro-image"
+          />
+        </div>
+      </header>
+      <main>
+        <hr />
+        <h1 class="main-text-title">We’re different</h1>
+        <div class="main-company-qualities-container">
+          <div class="main-c-q-1">
+            <img
+              src="./images/icon-snappy-process.svg"
+              alt=""
+              class="main-icon"
+            />
+            <h1>Snappy Process</h1>
+            <p>
+              Our application process can be completed in minutes, not hours.
+              Don’t get stuck filling in tedious forms.
+            </p>
+          </div>
+          <div class="main-c-q-2">
+            <img
+              src="./images/icon-affordable-prices.svg"
+              alt=""
+              class="main-icon"
+            />
+            <h1>Affordable Prices</h1>
+            <p>
+              We don’t want you worrying about high monthly costs. Our prices
+              may be low, but we still offer the best coverage possible.
+            </p>
+          </div>
+          <div class="main-c-q-3">
+            <img
+              src="./images/icon-people-first.svg"
+              alt=""
+              class="main-icon"
+            />
+            <h1>People First</h1>
+            <p>
+              Our plans aren’t full of conditions and clauses to prevent
+              payouts. We make sure you’re covered when you need it.
+            </p>
+          </div>
+        </div>
+        <div class="how-we-work-container">
+          <h1>Find out more about how we work</h1>
+          <button>How we work</button>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
