--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <header>
+      <!-- <header>
         <nav>
           <img src="./images/logo.svg" alt="" class="nav-logo" />
           <ul class="nav-links">
@@ -39,7 +39,7 @@
             class="intro-image"
           />
         </div>
-      </header>
+      </header> -->
       <main>
         <hr />
         <h1 class="main-text-title">We’re different</h1>
@@ -82,10 +82,71 @@
           </div>
         </div>
         <div class="how-we-work-container">
-          <h1>Find out more about how we work</h1>
+          <h1>
+            Find out more <br />
+            about how we work
+          </h1>
           <button>How we work</button>
         </div>
       </main>
+      -->
+      <footer>
+        <div class="socials-container">
+          <img src="./images/logo.svg" class="company-logo" />
+          <div class="socials">
+            <a href="" class="social-icon"
+              ><img src="./images/icon-facebook.svg" alt="" srcset=""
+            /></a>
+            <a href="" class="social-icon"
+              ><img src="./images/icon-twitter.svg" alt="" srcset=""
+            /></a>
+            <a href="" class="social-icon"
+              ><img src="./images/icon-pinterest.svg" alt="" srcset=""
+            /></a>
+            <a href="" class="social-icon"
+              ><img src="./images/icon-instagram.svg" alt="" srcset=""
+            /></a>
+          </div>
+        </div>
+
+        <!-- <hr /> -->
+        <div class="company-pages-container">
+          <div class="page-group">
+            <h3>How we work</h3>
+            <ul>
+              <li><a href="#">How we work</a></li>
+              <li><a href="#">Why Insure?</a></li>
+              <li><a href="#"> View plans</a></li>
+              <li><a href="#">Reviews</a></li>
+            </ul>
+          </div>
+          <div class="page-group">
+            <h3>Help me</h3>
+            <ul>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Terms of use</a></li>
+              <li><a href="#">Privacy policy</a></li>
+              <li><a href="#">Cookies</a></li>
+            </ul>
+          </div>
+          <div class="page-group">
+            <h3>Contact</h3>
+            <ul>
+              <li><a href="#">Sales</a></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Live chat</a></li>
+            </ul>
+          </div>
+          <div class="page-group">
+            <h3>Others</h3>
+            <ul>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Licenses</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
