main section update

--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
         </div>
       </header> -->
       <main>
-        <hr />
-        <h1 class="main-text-title">We’re different</h1>
-        <div class="main-company-qualities-container">
-          <div class="main-c-q-1">
+        <h1 class="title">We’re different</h1>
+        <div class="box">
+          <div class="box-item">
             <img
               src="./images/icon-snappy-process.svg"
               alt=""
-              class="main-icon"
+              class="item-icon"
             />
             <h1>Snappy Process</h1>
             <p>
@@ -56,11 +55,11 @@
               Don’t get stuck filling in tedious forms.
             </p>
           </div>
-          <div class="main-c-q-2">
+          <div class="box-item">
             <img
               src="./images/icon-affordable-prices.svg"
               alt=""
-              class="main-icon"
+              class="item-icon"
             />
             <h1>Affordable Prices</h1>
             <p>
@@ -68,11 +67,11 @@
               may be low, but we still offer the best coverage possible.
             </p>
           </div>
-          <div class="main-c-q-3">
+          <div class="box-item">
             <img
               src="./images/icon-people-first.svg"
               alt=""
-              class="main-icon"
+              class="item-icon"
             />
             <h1>People First</h1>
             <p>
@@ -81,16 +80,9 @@
             </p>
           </div>
         </div>
-        <div class="how-we-work-container">
-          <h1>
-            Find out more <br />
-            about how we work
-          </h1>
-          <button>How we work</button>
-        </div>
       </main>
-      -->
-      <footer>
+
+      <!-- <footer>
         <div class="socials-container">
           <img src="./images/logo.svg" class="company-logo" />
           <div class="socials">
@@ -109,7 +101,7 @@
           </div>
         </div>
 
-        <!-- <hr /> -->
+       
         <div class="company-pages-container">
           <div class="page-group">
             <h3>How we work</h3>
@@ -146,7 +138,7 @@
             </ul>
           </div>
         </div>
-      </footer>
+      </footer> -->
     </div>
   </body>
 </html>
