--- a/index.html
+++ b/index.html
@@ -9,37 +9,37 @@
   </head>
   <body>
     <div class="container">
-      <!-- <header>
+      <header>
         <nav>
           <img src="./images/logo.svg" alt="" class="nav-logo" />
-          <ul class="nav-links">
-            <li><a href="#">How we work</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Account</a></li>
-            <li><a href="#" class="active">View plans</a></li>
+          <ul class="link-s">
+            <li class="link"><a href="#">How we work</a></li>
+            <li class="link"><a href="#">Blog</a></li>
+            <li class="link"><a href="#">Account</a></li>
+            <li class="link active"><a href="#">View plans</a></li>
           </ul>
         </nav>
         <div class="intro-section">
           <div class="intro-text">
-            <hr />
-            <h1 class="intro-text-title">
+            <h1 class="intro-title">
               Humanizing <br />
               your insurance.
             </h1>
-            <p class="intro-text-description">
+            <p class="intro-description">
               Get your life insurance coverage easier and faster. We blend our
               expertise and technology to help you find the plan that’s right
               for you. Ensure you and your loved ones are protected.
             </p>
-            <button class="intro-text-btn">View plans</button>
+            <button class="intro-btn"><a href="#">View Plans</a></button>
           </div>
           <img
             src="./images/image-intro-desktop.jpg"
-            alt="A family of four holding hands"
+            alt=""
             class="intro-image"
           />
         </div>
-      </header> -->
+      </header>
+
       <main>
         <h1 class="title">We’re different</h1>
         <div class="box">
@@ -49,8 +49,8 @@
               alt=""
               class="item-icon"
             />
-            <h1>Snappy Process</h1>
-            <p>
+            <h1 class="item-title">Snappy Process</h1>
+            <p class="item-description">
               Our application process can be completed in minutes, not hours.
               Don’t get stuck filling in tedious forms.
             </p>
@@ -61,8 +61,8 @@
               alt=""
               class="item-icon"
             />
-            <h1>Affordable Prices</h1>
-            <p>
+            <h1 class="item-title">Affordable Prices</h1>
+            <p class="item-description">
               We don’t want you worrying about high monthly costs. Our prices
               may be low, but we still offer the best coverage possible.
             </p>
@@ -73,18 +73,25 @@
               alt=""
               class="item-icon"
             />
-            <h1>People First</h1>
-            <p>
+            <h1 class="item-title">People First</h1>
+            <p class="item-description">
               Our plans aren’t full of conditions and clauses to prevent
               payouts. We make sure you’re covered when you need it.
             </p>
           </div>
         </div>
+        <div class="box-2">
+          <h1 class="box-2-title">
+            Find out more <br />
+            about how we work
+          </h1>
+          <button class="box-2-btn">How we work</button>
+        </div>
       </main>
 
-      <!-- <footer>
+      <footer>
         <div class="socials-container">
-          <img src="./images/logo.svg" class="company-logo" />
+          <img src="./images/logo.svg" class="footer-image" />
           <div class="socials">
             <a href="" class="social-icon"
               ><img src="./images/icon-facebook.svg" alt="" srcset=""
@@ -101,44 +108,44 @@
           </div>
         </div>
 
-       
-        <div class="company-pages-container">
+        <div class="company-pages">
           <div class="page-group">
-            <h3>How we work</h3>
+            <h3 class="page-title">How we work</h3>
             <ul>
-              <li><a href="#">How we work</a></li>
-              <li><a href="#">Why Insure?</a></li>
-              <li><a href="#"> View plans</a></li>
-              <li><a href="#">Reviews</a></li>
+              <li class="page-link"><a href="#">How we work</a></li>
+              <li class="page-link"><a href="#">Why Insure?</a></li>
+              <li class="page-link"><a href="#"> View plans</a></li>
+              <li class="page-link"><a href="#">Reviews</a></li>
             </ul>
           </div>
           <div class="page-group">
-            <h3>Help me</h3>
+            <h3 class="page-title">Help me</h3>
             <ul>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">Terms of use</a></li>
-              <li><a href="#">Privacy policy</a></li>
-              <li><a href="#">Cookies</a></li>
+              <li class="page-link"><a href="#">FAQ</a></li>
+              <li class="page-link"><a href="#">Terms of use</a></li>
+              <li class="page-link"><a href="#">Privacy policy</a></li>
+              <li class="page-link"><a href="#">Cookies</a></li>
             </ul>
           </div>
           <div class="page-group">
-            <h3>Contact</h3>
+            <h3 class="page-title">Contact</h3>
             <ul>
-              <li><a href="#">Sales</a></li>
-              <li><a href="#">Support</a></li>
-              <li><a href="#">Live chat</a></li>
+              <li class="page-link"><a href="#">Sales</a></li>
+              <li class="page-link"><a href="#">Support</a></li>
+              <li class="page-link"><a href="#">Live chat</a></li>
             </ul>
           </div>
           <div class="page-group">
-            <h3>Others</h3>
+            <h3 class="page-title">Others</h3>
             <ul>
-              <li><a href="#">Careers</a></li>
-              <li><a href="#">Press</a></li>
-              <li><a href="#">Licenses</a></li>
+              <li class="page-link"><a href="#">Careers</a></li>
+              <li class="page-link"><a href="#">Press</a></li>
+              <li class="page-link"><a href="#">Licenses</a></li>
             </ul>
           </div>
         </div>
-      </footer> -->
+      </footer>
     </div>
+    <script src="./main.js"></script>
   </body>
 </html>
